[gd_scene load_steps=11 format=3 uid="uid://bhnil43uuy0kv"]

[ext_resource type="Script" path="res://main.gd" id="1_m0mjo"]
[ext_resource type="Texture2D" uid="uid://e4x04pcmxbq7" path="res://art/bg/mountains_farground.png" id="2_scdce"]
[ext_resource type="Texture2D" uid="uid://bxy2twvcpflow" path="res://art/bg/mountains_midground.png" id="3_00s4s"]
[ext_resource type="Texture2D" uid="uid://cyul2gnnyw0lv" path="res://art/bg/clouds_farground.png" id="3_m6u45"]
[ext_resource type="Texture2D" uid="uid://chy1scu6qteo4" path="res://art/bg/clouds_midground.png" id="3_po7ls"]
[ext_resource type="Texture2D" uid="uid://cnyqsrsgdj0lq" path="res://art/bg/mountains_foreground.png" id="4_crlcc"]
[ext_resource type="Texture2D" uid="uid://bghgwmtllx3xa" path="res://art/bg/sky_color.png" id="5_3pa4i"]
[ext_resource type="PackedScene" uid="uid://bq3rbdeqh4hd7" path="res://player.tscn" id="8_l485u"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_fljj0"]
a = Vector2(0, -10)
b = Vector2(1920, -10)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jitkt"]
b = Vector2(1920, 0)

[node name="Game" type="Node2D"]
script = ExtResource("1_m0mjo")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite2D" type="Sprite2D" parent="Background"]
scale = Vector2(137.15, 1)
texture = ExtResource("5_3pa4i")
centered = false

[node name="FargroundClouds" type="Parallax2D" parent="Background"]
repeat_size = Vector2(2048, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/FargroundClouds"]
position = Vector2(-14, 0)
texture = ExtResource("3_m6u45")
centered = false

[node name="MidgroundClouds" type="Parallax2D" parent="Background"]
repeat_size = Vector2(2048, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/MidgroundClouds"]
position = Vector2(-14, 374)
texture = ExtResource("3_po7ls")
centered = false

[node name="FargroundMountains" type="Parallax2D" parent="Background"]
repeat_size = Vector2(2048, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/FargroundMountains"]
position = Vector2(-14, 634)
texture = ExtResource("2_scdce")
centered = false

[node name="MidgroundMountains" type="Parallax2D" parent="Background"]
repeat_size = Vector2(2048, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/MidgroundMountains"]
position = Vector2(-14, 902)
texture = ExtResource("3_00s4s")
centered = false

[node name="ForegroundMountains" type="Parallax2D" parent="Background"]
repeat_size = Vector2(2048, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/ForegroundMountains"]
position = Vector2(-14, 977)
texture = ExtResource("4_crlcc")
centered = false

[node name="Boundaries" type="Node" parent="."]

[node name="Top" type="RigidBody2D" parent="Boundaries"]
collision_layer = 4
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Top"]
shape = SubResource("SegmentShape2D_fljj0")

[node name="Bottom" type="Area2D" parent="Boundaries"]
position = Vector2(0, 1080)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Bottom"]
position = Vector2(0, 20)
shape = SubResource("SegmentShape2D_jitkt")

[node name="Player" parent="." instance=ExtResource("8_l485u")]
visible = false
scale = Vector2(0.5, 0.5)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="UI"]
offset_left = 24.0
offset_top = 20.0
offset_right = 278.0
offset_bottom = 149.0
columns = 2

[node name="LabelScore" type="Label" parent="UI/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Score: "

[node name="Score" type="Label" parent="UI/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "0"

[node name="LabelHighScore" type="Label" parent="UI/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "High Score: "

[node name="HighScore" type="Label" parent="UI/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "0"

[node name="StartScreen" type="ColorRect" parent="UI"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.900215, 0.675002, 0.509982, 0.501961)

[node name="CenterContainer" type="CenterContainer" parent="UI/StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/StartScreen/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "Buzzy Bee"

[node name="Label2" type="Label" parent="UI/StartScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Press [spacebar] to play"

[node name="PauseScreen" type="ColorRect" parent="UI"]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.901961, 0.67451, 0.509804, 0.501961)

[node name="CenterContainer" type="CenterContainer" parent="UI/PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseScreen/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/PauseScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "PAUSED"

[node name="Label2" type="Label" parent="UI/PauseScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Press [spacebar] to continue"

[node name="Label3" type="Label" parent="UI/PauseScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 36
text = "Press [Escape] to quit"

[node name="GameOverScreen" type="ColorRect" parent="UI"]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.705882, 0, 0, 0.705882)

[node name="CenterContainer" type="CenterContainer" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverScreen/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 72
text = "GAME OVER!"

[node name="Label2" type="Label" parent="UI/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Press [spacebar] to restart"

[node name="Label3" type="Label" parent="UI/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Press [Escape] to quit"

[connection signal="body_entered" from="Boundaries/Bottom" to="." method="_on_collision"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
